fixed Wizard '0% Completed' not visible

--- a/App/PluginWeb/EzBob.Web/Content/css/app.css
+++ b/App/PluginWeb/EzBob.Web/Content/css/app.css
@@ -869,7 +869,8 @@ input[type="color"],
 }
 
 .bar_step0 {
-    width: 0%;
+    filter: none;
+    background: none;
     color: #000;
     text-shadow: 0 1px 1px #fff;
 }
